# Auto-Review-Tool

./: .dockerignore  .env_EXAMPLE  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: config.py  main.py
src/api/v1/: dependencies.py  lifespan.py  main.py  review.py  routers.py
src/api/v1/assistant/: handlers.py  schemas.py
src/api/v1/reviews/: handlers.py  schemas.py
src/infrastructure/cache/: base.py  redis.py
src/infrastructure/message_brokers/: base.py  converters.py  rabbitmq.py
src/services/: base.py  github_client_service.py  gpt_client_service.py  mediator.py
src/services/commands/: assistant.py  base.py
src/services/events/: assistant.py  base.py
src/tests/integration/: test_review.py
src/tests/unit/: test_github_client.py  test_mediator.py
src/utils/: config.py  logger.py  logging.py
