[tool.poetry]
name = "codereviewai"
version = "0.1.0"
description = ""
authors = ["0leksandrr <tsybulskyy.sasha@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
pydantic-settings = "^2.7.1"
openai = "^1.59.6"
punq = "^0.7.0"
setuptools = "^75.8.0"
redis = {extras = ["async"], version = "^5.2.1"}
aio-pika = "^9.5.4"
orjson = "^3.10.14"


[tool.poetry.group.dev.dependencies]
faker = "^33.3.1"
pytest = "^8.3.4"
pytest-asyncio = "^0.25.2"
pytest-cov = "^6.0.0"
respx = "^0.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
